# my-slint-app

./: Cargo.toml
.cargo/: config.toml
src/: borderless.rs  main - 副本.rs  main.rs  tesk_skia.rs
ui/: app-window.slint  titlebar.slint
