[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2024"

[dependencies]
# 移除了 compat-1-2 和 unstable-winit-030，仅保留 UI 运行必需的 winit 后端
slint = { version = "1.17.1", features = ["backend-winit"] }
slint_borderless_windows = { git = "https://github.com/Drew-Chase/slint_borderless_windows.git" }

[target.'cfg(windows)'.dependencies]
# 移除了未使用的 Win32_Graphics_Gdi，只保留获取屏幕分辨率所需的 Windows 消息及窗口机制
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
slint-build = "1.17.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16

[profile.dev]
opt-level = 0
debug = 1
panic = "unwind"
split-debuginfo = "unpacked"

# 这一段建议继续保留。对第三方依赖开启 opt-level = 2 能确保 
# Slint 及其底层渲染器在 Debug 模式下也不至于卡顿，同时不影响你手写代码的增量编译速度。
[profile.dev.package."*"]
opt-level = 2
